# lightMLP

./: .clangd  .gitignore  CMakeLists.txt  CustomConf.h  LICENSE  README.md  core.h  inference.h  install.py  matrix_test.cpp  moudledebug.cpp  workinit.sh
.debug/: test  testbitmap.cpp
FullMlpKit/.debug/: bpverify.py
FullMlpKit/.debug/mempool/: malloctest0.cpp
FullMlpKit/matrix/: matrix_gern.cpp
FullMlpKit/mlp/: mlp.h
FullMlpKit/qfix_ops/: qfix_op.c  qfix_op.h
FullMlpKit/tools/: mult_proc.h
JustInferCore/.debug/: matrixInplaceTest.c  mlpTest.cpp
JustInferCore/.fallback/: activator_vecwide.cpp
JustInferCore/mlp/: activator.h  mlp.cpp  mlp.h
JustInferCore/qfix_ops/: qfix_op.c  qfix_op.h
PC_side/wrapper/: wrapper.tpp
advanced/mempool/: NormalPools.h
bkups/matrix/: matrix.cpp  matrix.h
bkups/mlp/: activator.cpp  activator.h  mlp.h
langbind/: CMakeLists.txt
langbind/java/: CMakeLists.txt  test.java  test_train.java
langbind/java/.jnibind/: CMakeLists.txt  jnibind_customconf.h
langbind/java/.jnibind/core/: core_mlpexec.h  core_mlptrain.h  core_netdef.h  mlpcore_tojava.c  netdef_tojava.c
langbind/java/.jnibind/mbp/: mbpops_tojava.c  mbpstruct_tojava.c  mlib_ops.h
langbind/java/.verify/: timelimited_obmgr.c
langbind/java/core/: mlpexec.java  mlptrain.java  netLyrConf.java  netdef.java  netlyr.java
langbind/java/mlib/: matrixbp.java  mbpstruct_tojava.c  mlib_matrixbp.h  ops.java
langbind/python/: CMakeLists.txt  Makefile  corepy.pyi  matrixbp2py.c  matrixbp2py.h  mbp16dpy.pyi  mbpbuffer.c  mbpbuffer.h  open2py.c  open2py.h  verify.py  verify_train.py
langbind/python/.debug/: example.c  test.py
langbind/python/corepy/: core_entry.c
langbind/python/corepy/conv/: convop_topy.c  convop_topy.h
langbind/python/corepy/mlp/: open2py.c  open2py.h
langbind/python/mbpbuffer_topy/: mbpbuffer.c  mbpbuffer.h
langbind/python/pythonapi/: mbp16dpy.pyi  verify.py  verify_train.py
langbind/python/pythonapi/corepy/: __init__.pyi  conv.pyi
matrix/: matrix.cpp  matrix.h
mlp/: activator.cpp
mlpCCore/: CMakeLists.txt  CustomConf.h
mlpCCore/.debug/: test.c
mlpCCore/matrix/: CMakeLists.txt  matrix_static.c  matrix_static.h  mbpdebug.c
mlpCCore/mlp/: CMakeLists.txt  ac_callback.h  activator.c  activator.h  activator_grad.c  activator_grad.h  convop.c  convop.h  filedump.c  filedump.h  mlp.c  mlp.h  mlpdebug.c  test.c
mlpCCore/qfix_ops/: qfix_op.h
mlpCCore/tools/: mult_proc.h
mlpCppCore/matrix/: matrix_gern.cpp  matrix_gern.h  matrix_static.h
mlpCppCore/mlp/: activator.h  activator_grad.h  mlp.cpp  mlp.h
py_script_coop/: test_matrix_operations.py
python_scripts_helpers/: activator_test.json  activator_test.py  dbg_gen.py  exp_lut_generator.py  network_test.py
releases_for_MCU/: CMakeLists.txt  CustomConf.h  dbg_gen.py  exp_test.cpp  moduledebug.cpp  moudledebug.cpp  moudledebug_matrix.cpp  test
releases_for_MCU/f_q16_16_operation/: f_q16_16_op.c  f_q16_16_op.h
releases_for_MCU/matrix/: matrix.cpp  matrix.h  matrix_static.c  matrix_static.h
releases_for_MCU/mlp/: activator.cpp  activator.h  mlp.cpp  mlp.h
releases_for_MCU/qfloat_operation/: qfloat_op.c  qfloat_op.h
src_edgedev/: CMakeLists.txt  CustomConf.h
src_edgedev/.debug/: matrixInplaceTest.c  mlpTest.cpp  test
src_edgedev/.fallback/: activator_vecwide.h  matrix_static.c
src_edgedev/matrix/: matrix_static.c  matrix_static.h
src_edgedev/mlp/: activator.c  activator.cpp  activator.h  mlp.cpp  mlp.h
src_edgedev/qfix_ops/: qfix_op.c  qfix_op.h
src_pc_ext/.debug/: bpverify.py  fullmempleg.h  fullsfmodel.cpp  infertest.cpp  malloctest.cpp  matrixTest.cpp  pooleg.h  poolswitchertest.cpp  pooltest.cpp  spin_lock.h  test
src_pc_ext/.debug/mempool/: fullsfmodel.cpp
src_pc_ext/SoftMalloc/: softmalloc.h  spin_lock.h
src_pc_ext/SoftMalloc/SoftPool/: DynPool.cpp  DynPool.h  sfptr.inl  softpool.cpp  softpool.h
src_pc_ext/matrix/: matrix_gern.cpp  matrix_gern.h  matrix_static.h
src_pc_ext/mempool/: softpool.cpp  softpool.h
src_pc_ext/mlp/: activator.h  activator_det.h  activator_grad.h  mlp.cpp  mlp.h
src_pc_ext/qfix_ops/: qfix_op.h
src_pc_ext/tools/: mult_proc.h
wrapper/: wrapper.cpp  wrapper.h  wrapper.tpp
